Rename assistant_id to agent_id
